Fixed nav spacing

--- a/main.css
+++ b/main.css
@@ -54,23 +54,23 @@
   }
   
   .li-links {
-    padding: 0 15% 0 15%;
+    padding: 0 30% 0 30%;
   }
 
   .link1 {
-    float: left;
+
   }
 
   .link2 {
-    float: left;
+
   }
 
   .link3 {
-    float: right;
+    
   }
 
   .link4 {
-    float: right;
+
   }
 
   footer {
